--- a/src/style.css
+++ b/src/style.css
@@ -25,27 +25,76 @@ html {
 
 body {
   font-family: var(--font-primary);
+  background: #f7f7f7;
 }
 
 .primary-btn {
   display: inline-block;
-  padding: 10px;
+  padding: 8px 20px;
   border-radius: 12px;
   color: var(--white-clr);
-  font-size: 1.9rem;
+  font-size: 1.8rem;
   font-weight: 600;
 }
-.primary-btn.black{
-    background: var(--black-second-clr);
+.primary-btn.black {
+  background: var(--black-second-clr);
 }
-.primary-btn.light{
-    background: var(--orange-clr);
+.primary-btn.light {
+  background: var(--orange-clr);
 }
 
-.wrapper{
-    max-width: 1140px;
-    margin: 0 auto;
-    padding: 0 15px          ;
+.wrapper {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 /* *====== Header nav section ================*/
+
+nav {
+    padding-top: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav .logo {
+  display: flex;
+  align-items: center;
+}
+nav .logo img {
+  width: 55px;
+}
+nav .logo .logo-text {
+  color: var(--black-second-clr);
+  font-size: 2.8rem;
+  font-weight: 700;
+  margin-left: 10px;
+}
+
+nav ul.menu {
+  display: flex;
+  gap: 32px;
+}
+
+ul.menu a {
+  font-size: 1.9rem;
+  font-weight: 500;
+}
+
+ul.menu li:nth-child(1) a{
+    color: var(--orange-clr);
+}
+ul.menu li:nth-child(2) a{
+    color: var(--sky-blue-clr);
+}
+ul.menu li:nth-child(3) a{
+    color: #05D4DF;
+}
+ul.menu li:nth-child(4) a{
+    color: #5D58EF;
+}
+
+.bars-icon{
+    display: none;
+}
