--- a/src/style.css
+++ b/src/style.css
@@ -173,20 +173,31 @@ ul.menu li:nth-child(4) a {
   border-radius: 18.86px;
   box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
 }
-.standard-curriculum .curriculum-card:first-child{
+.standard-curriculum .curriculum-card:first-child {
   background: linear-gradient(
-    180deg,
-    rgb(222, 245, 255),
-    rgba(255, 255, 255, 0) 40%
-  ),
-  rgb(255, 255, 255);
+      180deg,
+      rgb(222, 245, 255),
+      rgba(255, 255, 255, 0) 40%
+    ),
+    rgb(255, 255, 255);
 }
 
-.standard-curriculum .curriculum-card:nth-child(2){
-  background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+.standard-curriculum .curriculum-card:nth-child(2) {
+  background: linear-gradient(
+      180deg,
+      rgb(255, 244, 220),
+      rgba(255, 255, 255, 0) 40%
+    ),
+    rgb(255, 255, 255);
 }
-.standard-curriculum .curriculum-card:last-child{
-  background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+
+.standard-curriculum .curriculum-card:last-child {
+  background: linear-gradient(
+      180deg,
+      rgb(238, 225, 255),
+      rgba(255, 255, 255, 0) 40%
+    ),
+    rgb(255, 255, 255);
 }
 
 .standard-curriculum .curriculum-card .card-image img {
@@ -212,30 +223,145 @@ ul.menu li:nth-child(4) a {
   font-weight: 700;
   text-align: center;
 }
-.standard-curriculum .curriculum-card .content a.card-hyper-one{
+.standard-curriculum .curriculum-card .content a.card-hyper-one {
   color: var(--sky-blue-clr);
 }
-.standard-curriculum .curriculum-card .content a.card-hyper-two{
+.standard-curriculum .curriculum-card .content a.card-hyper-two {
   color: var(--orange-clr);
 }
-.standard-curriculum .curriculum-card .content a.card-hyper-three{
-  color: #8700FF;
+.standard-curriculum .curriculum-card .content a.card-hyper-three {
+  color: #8700ff;
 }
 
-
-.standard-curriculum .slider-buttons{
+.standard-curriculum .slider-buttons {
   text-align: center;
 }
-.standard-curriculum .slider-buttons .slider-btn{
+.standard-curriculum .slider-buttons .slider-btn {
   width: 55px;
   height: 55px;
   border-radius: 50%;
   background: var(--orange-clr);
-  border:none;
+  border: none;
   font-size: 2.2rem;
   color: white;
   cursor: pointer;
 }
-.standard-curriculum .slider-buttons .slider-btn:first-child{
+.standard-curriculum .slider-buttons .slider-btn:first-child {
   margin-right: 10px;
+}
+
+/* * =========== Our story section ==========*/
+.our-stoies-section {
+  padding: 60px 0;
+  text-align: center;
+  background: url(../assets/bg.png),
+    linear-gradient(0deg, rgba(254, 163, 1, 0.3), rgba(255, 255, 255, 0.3) 100%);
+}
+.our-stoies-section .title {
+  color: var(--primary-clr);
+  font-size: 4rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+.our-stoies-section .our-stories {
+  display: flex;
+  gap: 20px;
+  margin: 70px 0;
+}
+
+.our-stoies-section .our-stories .left {
+  flex-basis: 45%;
+  background: white;
+  border-radius: 15px;
+  position: relative;
+}
+
+.our-stoies-section .our-stories .left .big-story-card img {
+  border-radius: 15px 15px 0 0;
+  width: 100%;
+  object-fit: cover;
+}
+.our-stoies-section .our-stories .left .big-story-card .story-title {
+  color: var(--primary-clr);
+  font-size: 2.2rem;
+  font-weight: 700;
+  line-height: 35px;
+  text-align: left;
+  margin: 55px 0 45px 35px;
+}
+.our-stoies-section .our-stories .left .big-story-card .story-details {
+  padding: 0 50px 30px 35px;
+  color: var(--gray-white-clr);
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 25px;
+  text-align: left;
+}
+
+.our-stoies-section .our-stories .right {
+  flex-basis: 55%;
+}
+
+.our-stoies-section .our-stories .right .stories-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 18px;
+}
+.our-stoies-section .our-stories .right .stories-cards .story-card {
+  flex-basis: calc(50% - 10px);
+  background: white;
+  border-radius: 15px;
+  position: relative;
+}
+.our-stoies-section .our-stories .right .stories-cards .story-card .content {
+  padding: 35px 35px 25px 35px;
+}
+.our-stoies-section
+  .our-stories
+  .right
+  .stories-cards
+  .story-card
+  .content
+  > p {
+  color: var(--primary-clr);
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 25px;
+  text-align: left;
+}
+
+.our-stoies-section .our-stories .right .stories-cards .story-card img {
+  width: 100%;
+  border-radius: 15px 15px 0 0;
+  object-fit: cover;
+}
+.story-card .story-date,
+.big-story-card .big-story-date {
+  position: absolute;
+  width: 170px;
+  height: 45px;
+  text-align: center;
+  border-radius: 40px;
+  background: #95b226;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--white-clr);
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 25px;
+  text-transform: capitalize;
+  bottom: 31%;
+  left: 15%;
+}
+
+.story-card:nth-child(2) .story-date {
+  background-color: #5d58f0;
+}
+
+.big-story-card .big-story-date {
+  top: 47%;
+  left: 9%;
+  background-color: #3cd8e8;
 }
